     to df = 6

  o  added checks in bbs (and brandom) to ensure that the specified
     degrees of freedom are greater than the range of the (unpenalized)
     null space

  o  various improvements in plot.mboost function

  o  added warning if df2lambda is likely to become numerically
     instable (i.e. in the case of large entries in the design matrix)

  o  various improvements and fixes in manuals


		CHANGES in `mboost' VERSION 2.0-11 (2011-03-17, r561)

  o  fix problem in bl_lin when using dense matrices from package "Matrix"


		CHANGES in `mboost' VERSION 2.0-10 (2011-02-20, r556)

  o  add rqss results for India childhood malnutrition data


        CHANGES in `mboost' VERSION 2.0-9 (2010-11-19, r543)

  o  add gbm to Suggests


		CHANGES in `mboost' VERSION 2.0-8 (2010-11-11, r542)

  o  make survival package happy again


		CHANGES in `mboost' VERSION 2.0-7 (2010-09-28, r534)

  o  vignette "mboost" updated

  o  remove problem with R CMD check that occured on some 64bit systems


                CHANGES in `mboost' VERSION 2.0-6 (2010-05-22, r510)

  o  no not use multicore functionality in R CMD check, really.


                CHANGES in `mboost' VERSION 2.0-5 (2010-05-21, r507)

  o  no not use multicore functionality in R CMD check


                CHANGES in `mboost' VERSION 2.0-4 (2010-04-15, r490)

  o  new vignette "mboost" describing 2.0-x series features

  o  fixed bug in bols(): contrast.arg was ignored if not a named list
     (which is wasn't per default)

  o  added (missing) response functions to families Weibull(),
     Loglog(), Lognormal() and NBinomial()

  o  fixed bug in family CoxPH which occured with NAs

  o  improvements and corrections in documentation


                CHANGES in `mboost' VERSION 2.0-3 (2010-03-10, r456)

  o  glmboost(..., center = TRUE) now also centers columns of the
     design matrix corresponding to contrasts of factors
     when an intercept term is present leading to faster risk